# STPS

./: .gitignore  404.html  Anchor.toml  README.md  docs.html  docs.txt  index.html  index.txt  llms-full.txt  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.github/: copilot-instructions.md
.github/agents/: anchor-dev.md  frontend.md  indexer.md  scoring-engine.md
.github/workflows/: deploy.yaml
api/: search
docs/: DesignDoc.md  DocTech.md  PROJECT_CURRENT_STATE.md  PROJECT_CURRENT_STATE.pt-BR.md  ROTEIRO.md  getting-started.html  getting-started.txt
docs/architecture/: ARCHITECTURE.md  INDEXER.md  LAYERS.md  SCORING_ALGORITHM.md  SMART_CONTRACT.md
docs/guides/: GLOSSARY.md  QUICKSTART.md  SETUP.md
docs/templates/: documentation-template.html  documentation-template.txt
documentation/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  source.config.ts
documentation/src/: mdx-components.tsx
examples/sdk-basic/: .env.example  demo.mjs  package.json
frontEnd/landing-page/: index.html  package-lock.json
frontEnd/stps-client/: .env.example  index.html  package-lock.json  package.json
programs/stps/: Cargo.toml
programs/stps/src/: errors.rs  lib.rs
programs/stps/src/instructions/: close_certificate.rs  flag_alert.rs  mod.rs  register_protocol.rs  update_score.rs
programs/stps/src/state/: mod.rs  protocol_certificate.rs  risk_level.rs  wallet_reputation.rs
scripts/: drop-score.sh  seed-protocols.sh  test-anchor.sh  test-prod.mjs  test-webhook.sh
tests/: stps.ts
tests/e2e/: pipeline.test.ts  (+1 more)
(+82 files in other folders)
