[package]
name = "stps"
version = "0.1.0"
description = "STPS — Solana Trust Protocol Standard"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stps"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
